--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
-.env
-.env.local
+# .env
+# .env.local
 # testing
 /coverage
 
@@ -26,8 +26,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# # local env files
+# .env*.local
 
 # vercel
 .vercel
